; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_dirty.c_write_files.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_dirty.c_write_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@TEST_REPO_PATH = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [93 x i8] c"This is a dirty file in the working directory!\0A\0AIt will not be staged!  Its filename is %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**)* @write_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_files(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_6__, align 4
  %5 = alloca %struct.TYPE_6__, align 4
  %6 = alloca i64, align 8
  store i8** %0, i8*** %2, align 8
  %7 = bitcast %struct.TYPE_6__* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.TYPE_6__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %8 = bitcast %struct.TYPE_6__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 bitcast (%struct.TYPE_6__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  store i64 0, i64* %6, align 8
  %9 = load i8**, i8*** %2, align 8
  %10 = load i64, i64* %6, align 8
  %11 = getelementptr inbounds i8*, i8** %9, i64 %10
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %3, align 8
  br label %13

13:                                               ; preds = %31, %1
  %14 = load i8*, i8** %3, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %37

16:                                               ; preds = %13
  %17 = call i32 @git_buf_clear(%struct.TYPE_6__* %4)
  %18 = call i32 @git_buf_clear(%struct.TYPE_6__* %5)
  %19 = load i32, i32* @TEST_REPO_PATH, align 4
  %20 = sext i32 %19 to i64
  %21 = inttoptr i64 %20 to i8*
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 (%struct.TYPE_6__*, i8*, i8*, ...) @git_buf_printf(%struct.TYPE_6__* %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %21, i8* %22)
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 (%struct.TYPE_6__*, i8*, i8*, ...) @git_buf_printf(%struct.TYPE_6__* %5, i8* getelementptr inbounds ([93 x i8], [93 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @cl_git_mkfile(i32 %27, i32 %29)
  br label %31

31:                                               ; preds = %16
  %32 = load i8**, i8*** %2, align 8
  %33 = load i64, i64* %6, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %6, align 8
  %35 = getelementptr inbounds i8*, i8** %32, i64 %34
  %36 = load i8*, i8** %35, align 8
  store i8* %36, i8** %3, align 8
  br label %13

37:                                               ; preds = %13
  %38 = call i32 @git_buf_dispose(%struct.TYPE_6__* %4)
  %39 = call i32 @git_buf_dispose(%struct.TYPE_6__* %5)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @git_buf_clear(%struct.TYPE_6__*) #2

declare dso_local i32 @git_buf_printf(%struct.TYPE_6__*, i8*, i8*, ...) #2

declare dso_local i32 @cl_git_mkfile(i32, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_6__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
